i hope this fixes it

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,6 @@ classifiers = [
 packages = ["find"]
 python_requires = ">=3.7"
 include_package_data = true
+
+[project.files]
+readme = "README.md"
