i think it should work now

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,8 +4,13 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "snailpy"
-version = "0.0.8"  # Replace with the actual version number
-description = "Use the Snail IDE API in Python!"
+version = "0.0.9"
+description = "A python package for interacting with Snail IDE's API features."
+long_description = """
+# SnailPy
+
+A python package for interacting with Snail IDE's API features.
+"""
 requires-python = ">=3.7"
 license = {text = "GNU GPLv3"}
 authors = [{name = "nmsderp", email = "nmsderp@gmail.com"}]
