--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "snailpy"
-version = "0.0.10"
+version = "0.0.11"
 description = "A python package for interacting with Snail IDE's API features."
 requires-python = ">=3.7"
 license = {text = "GNU GPLv3"}
@@ -32,3 +32,7 @@ classifiers = [
 packages = ["find"]
 python_requires = ">=3.7"
 include_package_data = true
+
+[project_urls]
+docs = "https://example.com/docs"
+source = "https://github.com/example/snailpy"
