--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=61", "wheel""]
+requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "snailpy"
-version = "0.0.16"
+version = "0.0.17"
 dependencies = [
   "requests",
 ]
@@ -23,7 +23,6 @@ classifiers = [
   "Development Status :: 2 - Pre-Alpha",
   "Programming Language :: Python"
 ]
-
 
 [project.urls]
 Homepage = "https://snail-ide.js.org/SnailPy"
