--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "snailpy"
-version = "0.0.17"
+version = "1.0.0"
 dependencies = [
   "requests",
 ]
@@ -20,7 +20,7 @@ readme = "README.md"
 license = {file = "LICENSE"}
 keywords = ["scratch", "api"]
 classifiers = [
-  "Development Status :: 2 - Pre-Alpha",
+  "Development Status :: 3 - Alpha"
   "Programming Language :: Python"
 ]
 
