--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ readme = "README.md"
 license = {file = "LICENSE"}
 keywords = ["scratch", "api"]
 classifiers = [
-  "Development Status :: 3 - Alpha"
+  "Development Status :: 3 - Alpha",
   "Programming Language :: Python"
 ]
 
